# WHEELTEC_C50X_2025.08.07

./: .gitignore  AGENTS.md  CLAUDE.md  convert_to_utf8.py  pyproject.toml
BALANCE/: balance_task.c  can_callback.c  control.c  data_task.c  filter.c  imu_task.c  led_task.c  ps2_task.c  robot_select_init.c  show_task.c  timx_callback.c  uartx_callback.c
BALANCE/Inc/: balance_task.h  control.h  data_task.h  filter.h  imu_task.h  led_task.h  ps2_task.h  robot_select_init.h  show_task.h  uartx_callback.h
CarType/: 4wd_robot_init.c  akm_robot_init.c  diff_robot_init.c  mec_robot_init.c  omni_robot_init.c
CarType/Inc/: robot_init.h
FreeRTOS/include/: FreeRTOSConfig.h
HARDWARE/: I2C.c  adc.c  auto_recharge.c  bsp_gamepad.c  buzzer.c  can.c  debug_uart.c  dma.c  enable_key.c  encoder.c  exti.c  key.c  motor.c  oled.c  ps2_classic.c  remote.c  stmflash.c  uartx.c
HARDWARE/ICM20948/: ICM20948.c  ICM20948.h
HARDWARE/Inc/: DataScope_DP.h  I2C.h  adc.h  auto_recharge.h  bsp_gamepad.h  can.h  debug_uart.h  dma.h  encoder.h  exti.h  key.h  motor.h  oled.h  oledfont.h  pstwo.h  remote.h  stmflash.h  uartx.h
HARDWARE/MPU6050/: MPU6050.c  mpu6050.h
SYSTEM/delay/: delay.c
SYSTEM/sys/: sys.c  sys.h
SYSTEM/usart/: usart.c  usart.h
USB_HOST/App/: Flydigi_gamepad_bk.c  (+11 more)
USER/: WHEELTEC.uvguix.86136  WHEELTEC.uvoptx  WHEELTEC.uvprojx  main.c  stm32f4xx.h  system.c  system.h
docs/: AKM_Hybrid_Speed_Measurement.md  Bluetooth_APP_Protocol.md  Debug_UART_Protocol.md  akm_motion_control_sim_summary.md
tests/: test_pi_notch_analysis.py  test_pi_notch_analysis_web.py
(+13 files in other folders)
